--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   api:
@@ -7,11 +7,11 @@ services:
       dockerfile: Dockerfile
     command: npm run start
     ports:
-      - '8000:8000'
+      - "8000:8000"
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
-    restart: unless-stopped
+    restart: always
     depends_on:
       - mongo
 
@@ -21,7 +21,7 @@ services:
       dockerfile: Dockerfile
     command: npm run start
     ports:
-      - '3000:3000'
+      - "3000:3000"
     volumes:
       - /usr/src/app/node_modules
     restart: unless-stopped
